feat(esri-plugin): write documentation and apply developer standards

--- a/src/components-examples/journey-maps/esri-plugin/esri-plugin/esri-plugin-example.html
+++ b/src/components-examples/journey-maps/esri-plugin/esri-plugin/esri-plugin-example.html
@@ -3,5 +3,10 @@
 </sbb-notification>
 <div class="web-map">
   <sbb-journey-maps [apiKey]="apiKey" language="en" (mapReady)="map = $event"></sbb-journey-maps>
-  <sbb-esri-plugin [map]="map" [featureLayers]="esriLayerDefinition" />
+  <sbb-esri-plugin
+    [map]="map"
+    [featureLayers]="esriLayerDefinition"
+    (mapLayerAdded)="layerAdded($event)"
+    (mapSourceAdded)="sourceAdded($event)"
+  />
 </div>
