feat(journey-maps): base for dark-mode controls

--- a/src/journey-maps/angular/journey-maps.html
+++ b/src/journey-maps/angular/journey-maps.html
@@ -32,6 +32,7 @@
         *ngIf="uiOptions.zoomControls"
         [map]="mapReady | async"
         [showSmallButtons]="uiOptions.showSmallButtons"
+        [styleMode]="styleOptions.mode"
       ></sbb-zoom-controls>
       <sbb-geolocate-button
         *ngIf="uiOptions.geoLocation"
