feat(journey-maps): add dark-mode to copyright

--- a/src/journey-maps/angular/journey-maps.html
+++ b/src/journey-maps/angular/journey-maps.html
@@ -73,7 +73,7 @@
       </div>
     </div>
     <div class="map-attribution">
-      <sbb-attribution [map]="mapReady | async"></sbb-attribution>
+      <sbb-attribution [map]="mapReady | async" [isDarkMode]="isDarkMode"></sbb-attribution>
     </div>
     <div class="map" #map></div>
   </div>
