feat: different buttons for left and right sidebar

--- a/src/angular/sidebar/sidebar/sidebar.html
+++ b/src/angular/sidebar/sidebar/sidebar.html
@@ -3,7 +3,7 @@
     <button
       type="button"
       class="sbb-button-reset-frameless sbb-sidebar-mobile-menu-bar-close sbb-icon-scaled"
-      (click)="_container.toggleSidebar()"
+      (click)="toggle()"
       [attr.aria-label]="_labelCloseSidebar"
     >
       <sbb-icon svgIcon="cross-small"></sbb-icon>
