fix(angular/tooltip): allow specifying the preferred position
Fixes #1855

--- a/src/angular/tooltip/tooltip-wrapper.html
+++ b/src/angular/tooltip/tooltip-wrapper.html
@@ -2,6 +2,7 @@
   class="sbb-tooltip-icon sbb-tooltip-trigger sbb-icon-scaled sbb-button-reset-frameless"
   [class.sbb-tooltip-trigger-active]="tooltip._isTooltipVisible()"
   type="button"
+  [sbbTooltipPosition]="position"
   [sbbTooltip]="tooltipTemplate"
   [sbbTooltipTrigger]="trigger"
   [sbbTooltipShowDelay]="hoverShowDelay"
