refactor: rename classes

--- a/src/components-examples/angular/tooltip/tooltip-simple/tooltip-simple-example.html
+++ b/src/components-examples/angular/tooltip/tooltip-simple/tooltip-simple-example.html
@@ -4,8 +4,8 @@
   <sbb-select [(ngModel)]="tooltipPreferredPosition">
     <sbb-option value="above">above</sbb-option>
     <sbb-option value="below">below</sbb-option>
-    <sbb-option value="after">after</sbb-option>
-    <sbb-option value="before">before</sbb-option>
+    <sbb-option value="left">left</sbb-option>
+    <sbb-option value="right">right</sbb-option>
   </sbb-select>
   <sbb-form-field label="Tooltip text content">
     <input type="text" [(ngModel)]="tooltipContent" sbbInput />
