fix(angular/file-selector): allow disabling multiple mode
This fixes a bug where the `SbbFileSelector` can only be used in "multiple" mode. By removing the `multiple` attribute on the underlying input field if `multiple` is set to `false` on the component, single selection is now working.

Fixes #2238

--- a/src/angular/file-selector/file-selector.html
+++ b/src/angular/file-selector/file-selector.html
@@ -10,7 +10,7 @@
     [attr.id]="inputId"
     [attr.accept]="accept"
     [attr.capture]="capture"
-    [attr.multiple]="multiple"
+    [attr.multiple]="multiple || null"
     [disabled]="disabled"
     (change)="fileChange($event)"
     (blur)="_onTouched()"
