fix(angular/badge): fix badge positioning on icon
This fixes the positioning of badges on icons. Since I couldn't find any cases where the badge was positioned "above" on an icon, I would not consider this fix as a breaking change.

Fixes #2225

--- a/src/components-examples/angular/badge/badge-overview/badge-overview-example.html
+++ b/src/components-examples/angular/badge/badge-overview/badge-overview-example.html
@@ -1,3 +1,8 @@
 <h3 sbbBadge="4" [sbbBadgeHidden]="hidden">Text with a badge</h3>
 
+<h3>Icon with a badge</h3>
+<p>
+  <sbb-icon svgIcon="bell-medium" sbbBadge="4" [sbbBadgeHidden]="hidden"></sbb-icon>
+</p>
+
 <button sbb-button (click)="toggleBadgeVisibility()">Toggle Badge</button>
