--- a/src/angular/tabs/tab-group.html
+++ b/src/angular/tabs/tab-group.html
@@ -20,7 +20,7 @@
       [attr.aria-label]="tab.ariaLabel || null"
       [attr.aria-labelledby]="!tab.ariaLabel && tab.ariaLabelledby ? tab.ariaLabelledby : null"
       [class.sbb-tab-label-active]="selectedIndex == i"
-      [ngClass]="tab.labelClass"
+      [class]="tab.labelClass"
       [disabled]="tab.disabled"
       (click)="_handleClick(tab, tabHeader, i)"
       (cdkFocusChange)="_tabFocusChanged($event, i)"
@@ -50,7 +50,7 @@
       [attr.aria-labelledby]="_getTabLabelId(i)"
       [attr.aria-hidden]="selectedIndex !== i"
       [class.sbb-tab-body-active]="selectedIndex == i"
-      [ngClass]="tab.bodyClass"
+      [class]="tab.bodyClass"
       [content]="tab.content!"
       [position]="tab.position!"
       [origin]="tab.origin"
