--- a/src/angular/datepicker/datepicker-content/datepicker-content.html
+++ b/src/angular/datepicker/datepicker-content/datepicker-content.html
@@ -5,7 +5,7 @@
   [attr.aria-labelledby]="_dialogLabelId ?? undefined"
   class="sbb-datepicker-content-container"
   [id]="datepicker.id"
-  [ngClass]="datepicker.panelClass"
+  [class]="datepicker.panelClass"
   [startAt]="datepicker.startAt"
   [minDate]="datepicker.minDate"
   [maxDate]="datepicker.maxDate"
