fix(angular/autocomplete): remove dependency on NgClass
We can set classes directly through `[class]` instead of having to import `NgClass`.

--- a/src/angular/autocomplete/autocomplete.html
+++ b/src/angular/autocomplete/autocomplete.html
@@ -5,7 +5,9 @@
     [id]="id"
     [attr.aria-label]="ariaLabel || null"
     [attr.aria-labelledby]="_getPanelAriaLabelledby(formFieldId)"
-    [ngClass]="_classList"
+    [class]="_classList"
+    [class.sbb-autocomplete-visible]="showPanel"
+    [class.sbb-autocomplete-hidden]="!showPanel"
     #panel
   >
     <ng-content></ng-content>
