fix(angular/menu): remove dependency on NgClass
We can set classes directly through `[class]` instead of having to import `NgClass`. The code had to be adjusted a bit, because the built-in `[class]` binding doesn't do diffing on the object literal.

--- a/src/angular/menu/menu.html
+++ b/src/angular/menu/menu.html
@@ -2,7 +2,7 @@
   <div
     class="sbb-menu-panel-wrapper"
     [id]="panelId"
-    [ngClass]="_classList"
+    [class]="_classList"
     (keydown)="_handleKeydown($event)"
     (click)="closed.emit('click')"
     [@transformMenu]="_panelAnimationState"
