--- a/src/angular/form-field/form-field.html
+++ b/src/angular/form-field/form-field.html
@@ -3,7 +3,7 @@
     <label
       class="sbb-label sbb-form-field-label"
       [id]="_labelId"
-      [attr.for]="_control.id"
+      [attr.for]="_control.disableAutomaticLabeling ? null : _control.id"
       [class.sbb-form-field-empty]="_control.empty"
     >
       @switch (_hasLabel()) {
