fix: rename `collapsibleHeaderLabel` to `collapsibleTitle`

--- a/src/angular/sidebar/sidebar/sidebar.html
+++ b/src/angular/sidebar/sidebar/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sbb-sidebar-inner-container sbb-scrollbar sbb-scrollbar-opaque" cdkScrollable>
   @if (mode === 'over') {
     <div class="sbb-sidebar-menu-bar-wrapper">
-      <span class="sbb-sidebar-menu-bar-title">{{ collapsibleHeaderLabel }}</span>
+      <span class="sbb-sidebar-menu-bar-title">{{ collapsibleTitle }}</span>
       <button
         type="button"
         class="sbb-button-reset-frameless sbb-sidebar-menu-bar-close sbb-icon-scaled"
