--- a/src/components-examples/angular/dialog/shared-data-dialog/shared-data-dialog-example.html
+++ b/src/components-examples/angular/dialog/shared-data-dialog/shared-data-dialog-example.html
@@ -11,9 +11,9 @@
   <li>
     <button type="button" sbb-secondary-button (click)="openDialog()">Pick one</button>
   </li>
-  @if (animal) {
+  @if (animal()) {
     <li>
-      You chose: <i>{{ animal }}</i>
+      You chose: <i>{{ animal() }}</i>
     </li>
   }
 </ol>
