docs(angular/accordion): update accordion examples

--- a/src/components-examples/angular/accordion/accordion-wizard/accordion-wizard-example.html
+++ b/src/components-examples/angular/accordion/accordion-wizard/accordion-wizard-example.html
@@ -1,5 +1,5 @@
 <sbb-accordion>
-  <sbb-expansion-panel [expanded]="step === 0" (opened)="setStep(0)">
+  <sbb-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)">
     <sbb-expansion-panel-header>
       <span>I'm a wizard like accordion</span>
       <p class="panel-text">
@@ -11,14 +11,14 @@
     <button type="button" sbb-button (click)="nextStep()">Next</button>
   </sbb-expansion-panel>
 
-  <sbb-expansion-panel [expanded]="step === 1" (opened)="setStep(1)">
+  <sbb-expansion-panel [expanded]="step() === 1" (opened)="setStep(1)">
     <sbb-expansion-panel-header> Step 1 </sbb-expansion-panel-header>
 
     <button type="button" sbb-ghost-button (click)="prevStep()">Previous</button>&nbsp;
     <button type="button" sbb-button (click)="nextStep()">Next</button>
   </sbb-expansion-panel>
 
-  <sbb-expansion-panel [expanded]="step === 2" (opened)="setStep(2)">
+  <sbb-expansion-panel [expanded]="step() === 2" (opened)="setStep(2)">
     <sbb-expansion-panel-header> Step 2 </sbb-expansion-panel-header>
 
     <button type="button" sbb-ghost-button (click)="prevStep()">Previous</button>&nbsp;
