--- a/src/components-examples/journey-maps/angular/journey-maps-pois-markers/journey-maps-pois-markers-example.html
+++ b/src/components-examples/journey-maps/angular/journey-maps-pois-markers/journey-maps-pois-markers-example.html
@@ -1,9 +1,11 @@
 <sbb-notification type="info" class="api-key-info">
   This example uses a test API key, that might be disabled at any time.
 </sbb-notification>
+
 <div class="web-map">
   <sbb-journey-maps
     [apiKey]="apiKey"
+    [styleOptions]="styleOptions"
     #advancedMap
     language="en"
     [viewportBounds]="form.get('viewportBounds')?.value"
@@ -47,10 +49,10 @@
       </li>
 
       <div formGroupName="pointsOfInterestOptions">
-        <sbb-form-field label="POI Environment">
+        <sbb-form-field label="POI Environment" style="width: 120px">
           <sbb-select formControlName="environment">
             @for (environment of ['prod', 'int']; track environment) {
-              <sbb-option [value]="environment">{{ environment }}</sbb-option>
+            <sbb-option [value]="environment">{{ environment }}</sbb-option>
             }
           </sbb-select>
         </sbb-form-field>
@@ -58,7 +60,7 @@
         <sbb-form-field label="POI Subcategories">
           <sbb-select multiple formControlName="categories">
             @for (category of POI_CATEGORIES; track category) {
-              <sbb-option [value]="category">{{ category }}</sbb-option>
+            <sbb-option [value]="category">{{ category }}</sbb-option>
             }
           </sbb-select>
         </sbb-form-field>
@@ -69,9 +71,8 @@
     <div class="row-2">
       <li>
         <span class="sbb-label">
-          Map markers
-          @if (selectedMarkerId) {
-            <span> (selected: {{ selectedMarkerId }})</span>
+          Map markers @if (selectedMarkerId) {
+          <span> (selected: {{ selectedMarkerId }})</span>
           }
         </span>
         <button
@@ -104,9 +105,9 @@
           <span class="sbb-label">Map interaction configuration</span>
           <div class="sbb-checkbox-group-horizontal">
             @for (type of listenerOptionTypes(); track type) {
-              <ng-container [formGroupName]="type">
-                <sbb-checkbox formControlName="watch">{{ type | titlecase }}</sbb-checkbox>
-              </ng-container>
+            <ng-container [formGroupName]="type">
+              <sbb-checkbox formControlName="watch">{{ type | titlecase }}</sbb-checkbox>
+            </ng-container>
             }
           </div>
         </div>
