fix(angular/tabs): allow for tablist aria-label and aria-labelledby to be set (#29562)
According to the [W3C reference implementation](https://www.w3.org/WAI/ARIA/apg/patterns/tabs/), the inner `tablist` can be labelled using `aria-label` or `aria-labelledby`. These changes add an input to allow them to be set.

--- a/src/angular/tabs/tab-header.html
+++ b/src/angular/tabs/tab-header.html
@@ -23,6 +23,8 @@
     class="sbb-tab-list"
     [class._sbb-animation-noopable]="_animationMode === 'NoopAnimations'"
     role="tablist"
+    [attr.aria-label]="ariaLabel || null"
+    [attr.aria-labelledby]="ariaLabelledby || null"
     (cdkObserveContent)="_onContentChanges()"
   >
     <div class="sbb-tab-labels" #tabListInner>
