--- a/src/angular/tabs/tab-group.html
+++ b/src/angular/tabs/tab-group.html
@@ -2,6 +2,8 @@
   #tabHeader
   [selectedIndex]="selectedIndex || 0"
   [disablePagination]="disablePagination"
+  [aria-label]="ariaLabel"
+  [aria-labelledby]="ariaLabelledby"
   (indexFocused)="_focusChanged($event)"
   (selectFocusedIndex)="selectedIndex = $event"
 >
