--- a/src/angular/checkbox/checkbox.html
+++ b/src/angular/checkbox/checkbox.html
@@ -11,10 +11,13 @@
     [disabled]="disabled"
     [attr.name]="name"
     [tabIndex]="disabled ? -1 : tabIndex"
+    [attr.aria-expanded]="ariaExpanded"
     [attr.aria-label]="ariaLabel || null"
     [attr.aria-labelledby]="ariaLabelledby"
     [attr.aria-describedby]="ariaDescribedby"
     [attr.aria-checked]="indeterminate ? 'mixed' : null"
+    [attr.aria-controls]="ariaControls"
+    [attr.aria-owns]="ariaOwns"
     (change)="_onInteractionEvent($event)"
     (click)="_onInputClick($event)"
   />
