fix(journey-maps): replaced old implementation with new journey-routes implementation

--- a/src/components-examples/journey-maps/angular/journey-maps-routes-zones/journey-maps-routes-zones-example.html
+++ b/src/components-examples/journey-maps/angular/journey-maps-routes-zones/journey-maps-routes-zones-example.html
@@ -6,7 +6,7 @@
     [apiKey]="apiKey"
     language="en"
     #advancedMap
-    [journeyMapsRoutingOption]="journeyMapsRoutingOption"
+    [journeyRoutesOption]="journeyRoutesOption"
     [journeyMapsZones]="form.get('zoneGeoJson')?.value"
     [viewportBounds]="form.get('viewportBounds')?.value"
     [listenerOptions]="form.get('listenerOptions')?.value"
