feat(journey-maps): new option to set the display of POIs as round icons (third priority)

--- a/src/components-examples/journey-maps/angular/journey-maps-pois-markers/journey-maps-pois-markers-example.html
+++ b/src/components-examples/journey-maps/angular/journey-maps-pois-markers/journey-maps-pois-markers-example.html
@@ -63,12 +63,13 @@
           </sbb-select>
         </sbb-form-field>
         <sbb-checkbox formControlName="includePreview">Preview-POIs</sbb-checkbox>
+        <sbb-checkbox formControlName="baseInteractivityEnabled">Base-POIs interactivity</sbb-checkbox>
       </div>
     </div>
     <div class="row-2">
       <div formGroupName="styleVersion">
         <div>
-          <span class="sbb-label">POI Style</span>
+          <span class="sbb-label">POIs map style version</span>
           <sbb-radio-group class="sbb-checkbox-group-horizontal" formControlName="versionNumber">
             <sbb-radio-button value="v2">v2</sbb-radio-button>
             <sbb-radio-button value="v3">v3</sbb-radio-button>
