feat(journey-maps): new pois example site option

--- a/src/components-examples/journey-maps/angular/journey-maps-pois-markers/journey-maps-pois-markers-example.html
+++ b/src/components-examples/journey-maps/angular/journey-maps-pois-markers/journey-maps-pois-markers-example.html
@@ -78,12 +78,13 @@
           </sbb-radio-group>
         </div>
       </div>
+      <div> </div>
       <div formGroupName="styleOptions">
         <div>
-          <p class="sbb-label">Light / Dark Mode</p>
-          <sbb-radio-group class="sbb-checkbox-group-vertical" formControlName="mode">
-            <sbb-radio-button value="bright">Bright Mode</sbb-radio-button>
-            <sbb-radio-button value="dark">Dark Mode</sbb-radio-button>
+          <span class="sbb-label">POIs map style mode</span>
+          <sbb-radio-group class="sbb-checkbox-group-horizontal" formControlName="mode">
+            <sbb-radio-button value="bright">Bright</sbb-radio-button>
+            <sbb-radio-button value="dark">Dark</sbb-radio-button>
           </sbb-radio-group>
         </div>
       </div>
