feat(multiple): make SBB Angular CSP compatible
This removes all inline styles for making the library CSP compatible.

--- a/src/angular/radio-button-panel/radio-button-panel.html
+++ b/src/angular/radio-button-panel/radio-button-panel.html
@@ -24,7 +24,7 @@
   <span class="sbb-selection-content">
     <span class="sbb-selection-inner-content">
       <!-- Add an invisible span so JAWS can read the label -->
-      <span style="display: none">&nbsp;</span>
+      <span hidden>&nbsp;</span>
       <span><ng-content></ng-content></span>
       <ng-content select="sbb-radio-button-panel-subtitle"></ng-content>
     </span>
