--- a/src/angular/checkbox/checkbox.html
+++ b/src/angular/checkbox/checkbox.html
@@ -44,7 +44,7 @@
 
   <div class="sbb-selection-content" (cdkObserveContent)="_onLabelTextChange()">
     <!-- Add an invisible span so JAWS can read the label -->
-    <span style="display: none">&nbsp;</span>
+    <span hidden>&nbsp;</span>
     <ng-content></ng-content>
   </div>
 </label>
