--- a/src/angular/radio-button/radio-button.html
+++ b/src/angular/radio-button/radio-button.html
@@ -23,7 +23,7 @@
 
   <div class="sbb-selection-content">
     <!-- Add an invisible span so JAWS can read the label -->
-    <span style="display: none">&nbsp;</span>
+    <span hidden>&nbsp;</span>
     <ng-content></ng-content>
   </div>
 </label>
