feat(journey-maps): enable map rotation and pitch
Refs: ROKAS-2162

--- a/src/components-examples/journey-maps/angular/journey-maps-map-navigation/journey-maps-map-navigation-example.html
+++ b/src/components-examples/journey-maps/angular/journey-maps-map-navigation/journey-maps-map-navigation-example.html
@@ -3,9 +3,11 @@
 </sbb-notification>
 <div class="web-map">
   <sbb-journey-maps
-    [apiKey]="apiKey"
     #advancedMap
     language="en"
+    [apiKey]="apiKey"
+    [interactionOptions]="interactionOptions"
+    [viewportDimensions]="viewportDimensions"
     (mapCenterChange)="mapCenterChange.next($event)"
     (mapBoundsChange)="mapBoundingBoxChange.next($event)"
     (zoomLevelsChange)="zoomLevels = $event"
