feat(journey-maps): enable map rotation and pitch
Refs: ROKAS-2162

--- a/src/components-examples/journey-maps/angular/journey-maps-map-navigation/journey-maps-map-navigation-example.html
+++ b/src/components-examples/journey-maps/angular/journey-maps-map-navigation/journey-maps-map-navigation-example.html
@@ -62,4 +62,15 @@
       </button>
     </li>
   </div>
+
+  <div class="row-3">
+    <li>
+      <span class="sbb-label">Rotate / Tilt</span>
+      <p>
+        <strong>Keyboard:</strong> Click on the map and then hold down the shift button and use the
+        arrow keys.
+      </p>
+      <p><strong>Touchscreen:</strong> Rotate with 2 fingers, tilt with 3.</p>
+    </li>
+  </div>
 </div>
