feat(journey-maps): enable map rotation and pitch
Refs: ROKAS-2162

--- a/src/journey-maps/angular/journey-maps.html
+++ b/src/journey-maps/angular/journey-maps.html
@@ -45,7 +45,7 @@
           (geolocateButtonClicked)="onGeolocateButtonClicked()"
         ></sbb-geolocate-button>
         <sbb-compass-button
-          *ngIf="interactionOptions.enableRotate"
+          *ngIf="showCompassButton()"
           [map]="mapReady | async"
           [isDarkMode]="isDarkMode"
           [showSmallButtons]="uiOptions.showSmallButtons"
