feat(journey-maps): enable map rotation and pitch
Refs: ROKAS-2162

--- a/src/journey-maps/angular/journey-maps.html
+++ b/src/journey-maps/angular/journey-maps.html
@@ -49,6 +49,7 @@
           [map]="mapReady | async"
           [isDarkMode]="isDarkMode"
           [showSmallButtons]="uiOptions.showSmallButtons"
+          [bearing]="-getMapBearing()"
           (compassButtonClicked)="resetBearingToNorth()"
         ></sbb-compass-button>
         <sbb-basemap-switch
