feat(journey-maps): fix compass icon bearing updates for Web Component
Refs: ROKAS-2162

--- a/src/components-examples/journey-maps/angular/journey-maps-map-navigation/journey-maps-map-navigation-example.html
+++ b/src/components-examples/journey-maps/angular/journey-maps-map-navigation/journey-maps-map-navigation-example.html
@@ -76,11 +76,8 @@
   <div class="row-3">
     <li>
       <span class="sbb-label">Rotate / Tilt</span>
-      <p>
-        <strong>Keyboard:</strong> Click on the map and then hold down the shift button and use the
-        arrow keys.
-      </p>
-      <p><strong>Touchscreen:</strong> Rotate with 2 fingers, tilt with 3.</p>
+      <p><strong>Keyboard: </strong>Click the map, hold Shift, and use arrow keys.</p>
+      <p><strong>Touchscreen: </strong>Rotate with two fingers, tilt with three.</p>
     </li>
   </div>
 </div>
