feat(journey-maps): also handle pitch with the compass button
Refs: ROKAS-2162

--- a/src/journey-maps/angular/journey-maps.html
+++ b/src/journey-maps/angular/journey-maps.html
@@ -50,7 +50,8 @@
           [isDarkMode]="isDarkMode"
           [showSmallButtons]="uiOptions.showSmallButtons"
           [negativeBearing]="-getMapBearing()"
-          (compassButtonClicked)="resetBearingToNorth()"
+          [pitch]="getMapPitch()"
+          (compassButtonClicked)="resetBearingAndPitch()"
         ></sbb-compass-button>
         <sbb-basemap-switch
           *ngIf="uiOptions.basemapSwitch"
