--- a/src/components-examples/journey-maps/angular/journey-maps-map-navigation/journey-maps-map-navigation-example.html
+++ b/src/components-examples/journey-maps/angular/journey-maps-map-navigation/journey-maps-map-navigation-example.html
@@ -6,6 +6,7 @@
     #advancedMap
     language="en"
     [apiKey]="apiKey"
+    [enableExtrusions]="true"
     [interactionOptions]="interactionOptions"
     [viewportDimensions]="viewportDimensions"
     (mapCenterChange)="mapCenterChange.next($event)"
